--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -2,25 +2,16 @@
 <html lang="en" class="no-js">
 <head>
   <meta charset="utf-8">
-  <!--[if IE]><![endif]-->
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title></title>
   <meta name="description" content="">
   <meta name="author" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <link rel="stylesheet" href="css/style.css?v=1">
-  <script src="js/modernizr-1.5.min.js"></script>
+  <link rel="stylesheet" href="inc/style.css?v=1">
   
 </head>
-<!--[if lt IE 7 ]> <body class="ie6"> <![endif]-->
-<!--[if IE 7 ]>    <body class="ie7"> <![endif]-->
-<!--[if IE 8 ]>    <body class="ie8"> <![endif]-->
-<!--[if IE 9 ]>    <body class="ie9"> <![endif]-->
-<!--[if (gt IE 9)|!(IE)]><!--> <body> <!--<![endif]-->
-
-
-
+<body>
   <div id="container">
     <header>
 	  <div id="players">Loading</div>
@@ -49,28 +40,10 @@
 		  </div>
         </p>
     </div>
-    
-    <footer>
-
-    </footer>
   </div> <!-- end of #container -->
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-  <script>!window.jQuery && document.write('<script src="js/jquery-1.4.2.min.js"><\/script>')</script>
-  <script>
-  <?php
-  $gameFile = 'input';
-  if (isset($_GET['game_file'])) {
-	$gameFile = $_GET['game_file'];
-  }
-  $input = file_get_contents($gameFile);
-  echo 'var data = "' . str_replace("\n", "\\n", $input) . '"';
-  ?>
-  </script>
-  <script src="js/visualizer.js?v=1"></script>
-
-  <!--[if lt IE 7 ]>
-    <script src="js/dd_belatedpng.js?v=1"></script>
-  <![endif]-->  
+  <script type="text/javascript" src="inc/jquery-1.4.2.min.js"></script>
+  <script type="text/javascript" src="game.js"></script>
+  <script type="text/javascript" src="inc/visualizer.js?v=1"></script>
 </body>
 </html>
