--- a/visualizer/index.html
+++ b/visualizer/index.html
@@ -43,7 +43,10 @@
   </div> <!-- end of #container -->
 
   <script type="text/javascript" src="inc/jquery-1.4.2.min.js"></script>
-  <script type="text/javascript" src="game.js"></script>
   <script type="text/javascript" src="inc/visualizer.js?v=1"></script>
+  <script type="text/javascript" src="replay.js"></script>
+  <script type="text/javascript" >
+	Visualizer.parseData(replayJson);
+  </script>
 </body>
 </html>
